--- a/RazorPages_Solutions/Pizza_StoreV9/Pages/Pizzas/EditPizza.cshtml
+++ b/RazorPages_Solutions/Pizza_StoreV9/Pages/Pizzas/EditPizza.cshtml
@@ -9,7 +9,7 @@
 <form method="post">
     <div class="form-group">
         <label asp-for="@Model.Pizza.Id" class="control-label"></label>
-        <input asp-for="@Model.Pizza.Id" class="form-control" />
+        <input hidden="hidden" asp-for="@Model.Pizza.Id" class="form-control" />
         <span asp-validation-for="@Model.Pizza.Id" class="text-danger"></span>
     </div>
     <div class="form-group">
